[tool.poetry]
name = "imgly"
version = "0.1.0"
description = "CLI tool to manipulate and manage medias."
authors = ["ArnaudJalbert <arno.jalbert@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.15.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


